# sistem-sdm/routes/api.php
@@ -8,7 +8,16 @@ Route::get('/user', function (Request $request) {
     return $request->user();
 })->middleware('auth:sanctum');
 
+// Routing Pegawai
 Route::get('/pegawai', [PegawaiController::class, 'index']);
+
+// Routing Unit Kerja
+use App\Http\Controllers\Api\UnitKerjaController;
+Route::get('/unit-kerja', [UnitKerjaController::class, 'index']);
+
+// Routing Demo Dokumentasi BNSP
+use App\Http\Controllers\Api\PegawaiDocController;
+Route::get('/pegawai-doc/{id}', [PegawaiDocController::class, 'show']);
 
 // Routing Demo Algoritma BNSP
 use App\Http\Controllers\Api\DemoAlgoritmaController;
